tests/parsing/smtlib/v2.6/errors/067_declare-fun_bad_arg_sort_1.expected
File "tests/parsing/smtlib/v2.6/errors/067_declare-fun_bad_arg_sort_1.smt2", line 2, character 18-19:
2 | (declare-fun foo (_) bar)
                      ^
Error while parsing a function declaration, read the reserved word '_',
      but expected a closing parenthesis, or a list of sorts for the
      arguments of the function.
